Make quickform's display_as_row wrap if it's too long for one line. Fix checkbox appearance for firefox.

--- a/modules/Base/Box/theme/default.css
+++ b/modules/Base/Box/theme/default.css
@@ -1125,6 +1125,8 @@ hr.line {
 .epesi_data input[type='checkbox'] {
     width: 13px;
     height: 13px;
+    vertical-align: middle;
+    margin-top: 0;
 }
 
 .epesi_data input:focus,
